Rewrite menus in Java